# Salt-Discordbot

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  env.sample.toml
intu-sdk/: Cargo.toml
intu-sdk/abi/: Fee.json  Vault.json  VaultFactory.json
intu-sdk/src/: lib.rs  main.rs  rpc.rs
salt/: Cargo.toml  env.toml
salt/.cargo/: config.toml
salt/src/: cli.rs  errors.rs  lib.rs  main.rs  prelude.rs  salt.rs  tracing.rs  which.rs
salt/src/cli/: git.rs
salt/src/salt/: live_logging.rs
src/: chains.rs  commands.rs  common.rs  env.rs  lib.rs  main.rs  per_user_spam_filter.rs  ratelimits.rs  runner.rs  start.rs  tracing.rs
src/chains/: explorer.rs
src/commands/: admin.rs  faucet.rs  standard.rs
src/commands/faucet/: check.rs  erc20.rs
standard/: Cargo.toml  README.md
standard/abi/: MatchingEngine.json  MatchingEngine.sol  Orderbook.sol  OrderbookFactory.json  OrderbookFactory.sol
standard/src/: .gitignore  abis.rs  apis.rs  data.json  eyre_assertions.rs  lib.rs  main.rs  tracing.rs
standard/src/apis/: rest.rs  rest_v4.rs  rest_v5.rs
standard/src/apis/rest/: exchange.rs  order_history.rs  orders.rs  pairs.rs  token.rs  trade_history.rs
standard/src/apis/rest_v4/: exchange.rs  order_history.rs  orders.rs  token.rs
standard/src/apis/rest_v5/: exchange.rs  order_history.rs  orders.rs  pairs.rs  token.rs  trade_history.rs
