[package]
name = "salt-discordbot"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [ "intu-sdk","salt"]
exclude = ["private-apis"]

[workspace.dependencies]
salt-sdk = { path = "salt" }

[dependencies]
alloy = { version = "1.0.9", features = ["sol-types"] }
camino = "1.1.9"
color-eyre = "0.6.3"
hex = { version = "0.3.0", package = "hex-conservative" }
or_poisoned = "0.1.0"
rustls = { version = "0.23.23", features = ["aws-lc-rs"] }
salt-private-apis = { version = "0.1.0", path = "private-apis" }
salt-sdk.workspace = true
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
static-toml = "1.3.0"
thiserror = "2.0.12"
time = { version = "0.3.37", features = ["local-offset", "macros", "serde"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "time", "json"] }
twilight = "0.16.0"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = { version = "0.16.0", features = ["rustls-aws-lc-rs"] }
twilight-http = "0.16.0"
twilight-interactions = "0.16.1"
twilight-mention = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
url = { version = "2.5.4", features = ["serde"] }

[build-dependencies]
color-eyre = "0.6.3"
toml = "0.8.22"
toml_edit = "0.22.26"

[lints.rust]
unused_imports = "allow"
