[package]
name = "intu-sdk"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["cli"]
cli = ["dep:rustyline", "dep:color-eyre", "dep:toml"]

[[bin]]
name = "intu-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
alloy = { version = "1.0.9", features = ["sol-types"] }
base64 = "0.22.1"
camino = "1.1.9"
color-eyre = { version = "0.6.4", optional = true }
rustyline = { version = "16.0.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = { version = "0.8.22", optional = true }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["time", "local-time", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
