[package]
name = "salt-sdk"
description = "Salt asset manager Rust SDK"
homepage = "https://salt.space/"
repository = "https://github.com/ActuallyHappening/Salt-DiscordBot"
version = "0.0.0-alpha1"
edition = "2024"
default-run = "salt-cli"
license = "ISC"
publish = true

[features]
default = ["cli"]
cli = ["dep:rustyline", "dep:color-eyre", "dep:toml"]

[[bin]]
name = "salt-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
camino = "1.1.9"
color-eyre = { version = "0.6.4", optional = true }
dirs = "6.0.0"
regex = "1.11.1"
rustyline = { version = "15.0.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = { version = "0.8.22", optional = true }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["time", "local-time", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
which = { version = "7.0.3", features = ["tracing"] }
