[package]
name = "standard-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.9"
color-eyre = "0.6.5"
nonzero_lit = "0.1.2"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
time = { version = "0.3.41", features = ["local-offset", "macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "time"] }
url = { version = "2.5.4", features = ["serde"] }

[lints]
workspace = true
